# hdx-python-utilities

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  apidocs.md  genindex.html  hatch.toml  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt  tox.ini
.config/: coveragerc  pre-commit-config.yaml  pytest.ini  ruff.toml
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: hdx.doctree  hdx.utilities.doctree  modules.doctree
.github/workflows/: publish-test.yaml  publish.yaml  publish.yml  run-python-tests.yaml  run-python-tests.yml
_sources/source/: hdx.rst.txt  hdx.utilities.rst.txt
doc/: main.md
docs/: .readthedocs-custom-steps.yml  main.md
documentation/: .readthedocs.yaml  conf.py  index.md  index.rst  main.md  mkdocs.yaml  pydoc-markdown.yaml  pydoc-markdown.yml
source/: hdx.html  hdx.utilities.html  modules.html
src/hdx/utilities/: __init__.py  azure_utils.py  base_downloader.py  compare.py  database.py  dateparse.py  dictandlist.py  downloader.py  easy_logging.py  email.py  encoding.py  error_handler.py  errors_on_exit.py  errors_onexit.py  file_hashing.py  frictionless_wrapper.py  html.py  loader.py  location.py  logging_configuration.yml  matching.py  path.py  retriever.py  saver.py  session.py  state.py  text.py  typehint.py  useragent.py  uuid.py  version.py  wheel.py  zip_crc.py
tests/fixtures/: test_data.csv
tests/fixtures/compare/: test_csv_processing.csv  test_csv_processing2.csv
tests/fixtures/config/: hdx_config.json  json_csv.yaml  json_csv.yml  logging_config.json  logging_config.yaml  smtp_config.json
tests/fixtures/downloader/: basicauth.txt  extra_params.json  extra_params_tree.yml  test_csv_processing.csv  test_csv_processing_blanks.csv  test_data.xlsx  test_json_processing.json  test_xls_processing.xls  test_xlsx_processing.xlsx  text_json_processing.json
tests/fixtures/file_hashing/: bad_index.xlsx  test.xlsx
tests/fixtures/html/: response.html
tests/fixtures/retriever/: retriever-test.csv  test.json  test.yaml  test_hxl.csv
tests/fixtures/retriever/fallbacks/: test.csv  test.json  test.yaml
tests/fixtures/saver/: out.csv  out.json  out2.csv  out2.json  out5.json  out6.json  out7.json  out8.csv  out8.json  pretty-false_sortkeys-false.json  pretty-false_sortkeys-false.yaml  pretty-false_sortkeys-true.json  pretty-false_sortkeys-true.yaml  pretty-true_sortkeys-false.json  pretty-true_sortkeys-false.yaml  pretty-true_sortkeys-true.json  pretty-true_sortkeys-true.yaml
tests/fixtures/state/: analysis_dates.txt
tests/fixtures/wheel/: hdx_python_utilities-3.0.2-py2.py3-none-any.whl
tests/hdx/: conftest.py
tests/hdx/utilities/: test_compare.py  test_database.py  test_dateparse.py  test_dictandlist.py  test_downloader.py  test_easy_logging.py  test_email.py  test_encoding.py  test_error_handler.py  test_errors_onexit.py  test_file_hashing.py  test_html.py  test_loader.py  test_location.py  test_matching.py  test_path.py  test_retriever.py  test_saver.py  test_state.py  test_text.py  test_useragent.py  test_uuid.py  test_version.py  test_wheel.py  test_zip_crc.py  utils.py
