#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-python-utilities"
description = "HDX Python Utilities for streaming tabular data, date and time handling and other helpful functions"
authors = [{name = "Michael Rans", email = "rans@email.com"}]
license = {text = "MIT"}
keywords = ["HDX", "utilities", "library", "streaming", "tabular data", "datetime", "date", "time", "timezone", "dict",
    "list", "json", "yaml"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"
# Extras for frictionless[excel,json] added explicitly
# for conda-forge compatibility
dependencies = [
    "frictionless>=5.18.0",
    # frictionless[excel]
    "openpyxl>=3.1.2",
    "tableschema-to-template>=0.0.13",
    "xlrd>=2.0.1",
    "xlwt>=1.3.0",
    # frictionless[json]
    "ijson>=3.2.3",
    "jsonlines>=4.0.0",
    # /end frictionless extras
    "loguru",
    "pyphonetics",
    "python-dateutil>=2.9.0, <2.9.1",
    "ratelimit",
    "requests-file",
    "ruamel.yaml",
    "xlsx2csv",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-python-utilities"

[project.optional-dependencies]
html = ["beautifulsoup4", "html5lib"]
diff = ["cydifflib"]
email = ["email_validator"]
test = ["pytest", "pytest-cov", "pytest-loguru"]
dev = ["pre-commit"]
docs = ["mkapi"]
