[metadata]
name = hdx-python-utilities
description = HDX Python Utilities for streaming tabular data, date and time handling and other helpful functions
version = attr: hdx.utilities.__version__
author = Michael Rans
author_email = rans@email.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = HDX, utilities, library, streaming, tabular data, datetime, date, time, timezone, dict, list, json, yaml
url = https://github.com/OCHA-DAP/hdx-python-utilities
platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = True
packages = find_namespace:
include_package_data = True
package_dir =
    = src

python_requires = >=3.8

# Extras for frictionless[excel,json] added explicitly
# for conda-forge compatibility
install_requires =
    frictionless>=5.5.1
    # frictionless[excel]
    openpyxl>=3.0
    tableschema-to-template>=0.0.13
    xlrd>=1.2
    xlwt>=1.2
    # frictionless[json]
    ijson>=3.0
    jsonlines>=1.2
    # /end frictionless extras
    loguru
    python-dateutil==2.8.2
    ratelimit
    requests-file
    ruamel.yaml

[options.extras_require]
html = beautifulsoup4; html5lib
email = email_validator

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

